# juegocartas-proyecto-parcial3

./: CMakeLists.txt  Diagrama.puml  Makefile  README.md  makefile
include/: Baraja.hpp  Carta.h  Carta.hpp  Juego.h  Mazo.h  Tablero.h
juego-cartas/: CMakeLists.txt  README.md
juego-cartas/src/: main.cpp
juego-cartas/src/barajas/: Baraja.cpp  Baraja.h  index.h
solitario-klondike/: Makefile  README.md
solitario-klondike/src/: Carta.cpp  FTXUI.cpp  Juego.h  Mazo.cpp  Mazo.h
src/: 21.cpp  Carta.cpp  Juego.cpp  Mazo.cpp  Tablero.cpp  Tablero.h  main.cpp
